@@ -21,3 +21,4 @@ Bug fixes
  * Wagtail now checks that Group is registered with the Django admin before unregistering it (Jason Morrison)
  * Previewing inaccessible pages no longer fails with ``ALLOWED_HOSTS = ['*']`` (Robert Rollins)
  * The submit button 'spinner' no longer activates if the form has client-side validation errors (Jack Paine, Matt Westcott)
+ * Overriding ``MESSAGE_TAGS`` in project settings no longer causes messages in the Wagtail admin to lose their styling (Tim Heap)
